--- a/contact.html
+++ b/contact.html
@@ -20,9 +20,9 @@
       info
     </p>
     <div class="links">
-      <a href="index.html" class="link">Homepage</a>
-      <a href="photo.html" class="link">Photo</a>
-      <a href="contact.html" class="link">Contact</a>
+      <a href="index.html">Homepage</a>
+      <a href="photo.html">Photo</a>
+      <a href="contact.html">Contact</a>
     </div>
   </div>
 </body>
