--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       Croissants and other viennoiserie are made of a layered yeast-leavened dough
     </p>
     <div class="links">
-      <a href="index.html" class="link">Homepage</a>
-      <a href="photo.html" class="link">Photo</a>
-      <a href="contact.html" class="link">Contact</a>
+      <a href="index.html">Homepage</a>
+      <a href="photo.html">Photo</a>
+      <a href="contact.html">Contact</a>
     </div>
   </div>
 </body>
