--- a/photo.html
+++ b/photo.html
@@ -16,9 +16,9 @@
     <h1>🥐 A picture of a croissant</h1>
     <img src="/image/croissant.jpeg" alt="croissant" class="croissant">
     <div class="links">
-      <a href="index.html" class="link">Homepage</a>
-      <a href="photo.html" class="link">Photo</a>
-      <a href="contact.html" class="link">Contact</a>
+      <a href="index.html">Homepage</a>
+      <a href="photo.html">Photo</a>
+      <a href="contact.html">Contact</a>
     </div>
   </div>
 </body>
