--- a/contact.html
+++ b/contact.html
@@ -5,9 +5,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Contact Us for more information">
+
   <link rel="stylesheet" href="/css/style.css">
 
-  <title>Contact</title>
+  <title>Contact us 🥐 - Crispycroissant.com</title>
 </head>
 
 <body>
@@ -20,9 +22,9 @@
       info
     </p>
     <div class="links">
-      <a href="index.html">Homepage</a>
-      <a href="photo.html">Photo</a>
-      <a href="contact.html">Contact</a>
+      <a href="index.html" title="Homepage">Homepage</a>
+      <a href="photo.html" title="Croissant Photo">Photo</a>
+      <a href="contact.html" title="Contact Us">Contact</a>
     </div>
   </div>
 </body>
