--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="A buttery handmade croissant, warm from the oven, is truly something special">
   <link rel="stylesheet" href="/css/style.css">
-  <title>My Croissant</title>
+  <title>My Crispy Croissant 🥐 - Crispycroissant.com</title>
 </head>
 
 <body>
@@ -16,9 +17,9 @@
       Croissants and other viennoiserie are made of a layered yeast-leavened dough
     </p>
     <div class="links">
-      <a href="index.html">Homepage</a>
-      <a href="photo.html">Photo</a>
-      <a href="contact.html">Contact</a>
+      <a href="index.html" title="Homepage">Homepage</a>
+      <a href="photo.html" title="Croissant Photo">Photo</a>
+      <a href="contact.html" title="Contact Us">Contact</a>
     </div>
   </div>
 </body>
