--- a/photo.html
+++ b/photo.html
@@ -4,21 +4,22 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="description" content="  picture of Our Crispy Homemade French butter croissants">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/style.css">
 
-  <title>Photo</title>
+  <title>Crispy Homemade croissants 🥐 - Crispycroissant.com</title>
 </head>
 
 <body>
   <div class="content">
 
     <h1>🥐 A picture of a croissant</h1>
-    <img src="/image/croissant.jpeg" alt="croissant" class="croissant">
+    <img src="/image/croissant.jpeg" alt="crispy croissant" class="croissant">
     <div class="links">
-      <a href="index.html">Homepage</a>
-      <a href="photo.html">Photo</a>
-      <a href="contact.html">Contact</a>
+      <a href="index.html" title="Homepage">Homepage</a>
+      <a href="photo.html" title="Croissant Photo">Photo</a>
+      <a href="contact.html" title="Contact Us">Contact</a>
     </div>
   </div>
 </body>
